<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@android:color/transparent"
    android:gravity="center">

    <LinearLayout
        android:layout_width="@dimen/custom_dialog_component_width"
        android:layout_height="wrap_content"
        android:background="@drawable/dialog_bg_corners"
        android:orientation="vertical">

        <TextView
            android:id="@+id/title"
            style="@style/my_dialog_title_text_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/prompt"/>

        <LinearLayout
            android:id="@+id/content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/message"
                style="@style/my_dialog_content_text_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_medium"
                android:layout_marginRight="@dimen/margin_medium"
                android:gravity="left"
                android:minHeight="80dp"
                android:paddingBottom="16dp"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/bottom"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginLeft="@dimen/margin_medium"
            android:layout_marginRight="@dimen/margin_medium"
            android:orientation="horizontal">

            <Button
                android:id="@+id/negativeButton"
                style="@style/my_dialog_button_text_style_negative"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/item_clicked_background"
                android:text="@string/cancel"/>

            <Button
                android:id="@+id/positiveButton"
                style="@style/my_dialog_button_text_style_positive"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/item_clicked_background"
                android:text="@string/sure"/>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>